2001-11-01  Paul Eggert  <eggert@twinsun.com>

	* lib/m4sugar/m4sh.m4 (AS_SHELL_SANITIZE): _AS_CR_PREPARE needs to
	be invoked before _AS_LINENO_PREPARE.
        (_AS_LINENO_PREPARE): Use as_cr_digits and as_cr_alnum rather
	than character ranges.
	
	* lib/m4sugar/m4sh.m4 (AS_SHELL_SANITIZE): Fix NLS before
	invoking AS_BASENAME.  Set the locale variables to 'C' if
	possible, as POSIX requires this to get the traditional
	behavior.
	* doc/autoconf.texi (Special Shell Variables): Describe the above.

2001-10-31  Paul Eggert  <eggert@twinsun.com>

	* lib/m4sugar/m4sh.m4 (_AS_LINENO_WORKS): Do not surround body
	with {}, as that triggers a bug in Bash 2.05.

	(_AS_LINENO_PREPARE): Use Sed rather than
	Awk.  Fix the sed prepass to work even if there are multiple
	instances of $LINENO on the same line.  Do not substitute for
	other variables like $LINENOT.  Do not check file dates; such a
	check is unreliable on sufficiently fast machines, and removing
	the check makes the code simpler and more reliable.  Check for
	output and chmod failures.

	* doc/autoconf.texi (Special Shell Variables): Document
	the above.

2001-10-31  Akim Demaille  <akim@epita.fr>

	* tests/Makefile.am (atconfig): Remove this target, Automake
	handles it now.

2001-10-31  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/autotest.m4 (AC_CONFIG_TESTDIR): Do not
	AC_CONFIG_FILES(atlocal) as it means a file atlocal.in *must* be
	provided, while it is optional.
	* configure.ac: Adjust.

2001-10-26  Paul Eggert  <eggert@twinsun.com>

	* NEWS, README, configure.ac, lib/Autom4te/General.pm,
	  lib/Autom4te/Struct.pm:
	Require Perl 5.005_03 instead of just 5.005, as some tests fail
	with 5.005_02.

	* doc/autoconf.texi (Special Shell Variables): Document some
	more LINENO gotchas, particularly with respect to the Awk+Sed hack.

	* lib/m4sugar/m4sh.m4 (_AS_LINENO_WORKS): New macro.
	(_AS_LINENO_PREPARE): Use it instead of shell eval, since
	eval $LINENO is not portable in practice.
