@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.24.
-.TH AUTORECONF "1" "October 2001" "GNU Autoconf 2.52e" FSF
+.TH AUTORECONF "1" "November 2001" "GNU Autoconf 2.52e" FSF
 .SH NAME
 autoreconf \- Update generated configuration files
 .SH SYNOPSIS
